# finance-dashboard-workexp

./: .gitignore  NEXT-STEPS.md  README.md  SCHEDULE.md  SETUP.md  SPEC.md  app.py  pyproject.toml
docs/: GIT.md  NEXT-STEPS.md  SCHEDULE.md  SETUP.md  SPEC.md
guides/: 00-welcome.md  01-python-basics.md  02-dataframes.md  03-getting-data-yfinance.md  04-filtering-searching.md  05-building-the-dashboard.md
notebooks/: 01_python_basics.ipynb  02_pandas_dataframes.ipynb  03_yfinance_data.ipynb  04_filtering_and_searching.ipynb  05_charts_and_streamlit_prep.ipynb
reference/: pandas-cheatsheet.md  python-cheatsheet.md  streamlit-cheatsheet.md  yfinance-cheatsheet.md
