[project]
name = "finance-dashboard-workexp"
version = "0.1.0"
description = "Work-experience project: build a stock screener with Python, yfinance and Streamlit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "yfinance>=0.2.54",
    "pandas>=2.2",
    "plotly>=5.24",
    "jupyter>=1.1",
    "matplotlib>=3.9",
]

# This file tells `uv` (the tool you install in SETUP.md) which packages the
# project needs. You do not normally edit it by hand — SETUP.md shows the
# `uv add` command that updates it for you.
